--- a/Programa/estilo.css
+++ b/Programa/estilo.css
@@ -126,6 +126,8 @@ input[type="text"] {
 #tablero {
   border-collapse: collapse;
   margin-bottom: 15px;
+    width: 430px;
+  height: 430px;
 }
 
 #tablero td {
@@ -198,48 +200,36 @@ input[type="text"] {
     grid-template-areas:
       "form marcador"
       "form tablero";
-      
   }
 
-  /* ✅ Versión tablet tipo tarjeta horizontal */
   .container {
     display: grid;
     grid-template-columns: 1fr 1.5fr 1fr;
+    gap: 20px;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .container .col {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-items: center;
-    text-align:center;
-    padding: 10px;
-    gap: -1px;
+    gap: 10px;
   }
 
-
-  .score {
-    grid-column: 1;
-    font-size: 19px;
-    color: #661bce;
-  }
-
-  .stats {
-    grid-column: 2;
+  .container .estadisticas .stats {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 1px;
   }
 
   .stat {
-    display: inline-block;
-    margin-right: 8px;
+    margin: 4px 0;
   }
 
-  .container .extra {
-    grid-column: 3;
-    text-align: right;
-    font-size: 40px;
-    color: #444;
+  .decoracion-mario {
+    display: none;
   }
-
-  .decoracion-mario { display: none; }
 }
 
 /* ==== RESPONSIVE: MÓVIL ==== */
@@ -258,4 +248,40 @@ input[type="text"] {
 
   .decoracion-mario,
   .decoracion-izquierda { display: none; }
+}
+#ranking {
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  padding: 15px;
+  margin: 20px auto;
+  width: 350px;
+  font-family: Arial, sans-serif;
+}
+
+#ranking h2, 
+#ranking h3 {
+  text-align: center;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+#ranking p {
+  margin: 5px 0;
+  font-size: 14px;
+}
+
+#ranking span {
+  font-weight: bold;
+  color: #333;
+}
+
+#ranking ol {
+  margin-top: 10px;
+  padding-left: 20px;
+}
+
+#ranking li {
+  margin-bottom: 4px;
+  font-size: 14px;
 }
